<resources>
    <string name="app_name">紧急呼救</string>
    <string name="enter_phone_hint">手机号</string>
    <string name="enter_pwd_hint">密码</string>
    <string name="login_sign_up_button">注册或使用验证码登陆</string>
    <string name="login_login_button">登录</string>
    <string name="login_image_description">welcome icon</string>
    <string name="sign_up_title">用手机号注册或登录</string>
    <string name="sign_up_enter_code_hint">验证码</string>
    <string name="sign_up_get_code_button">获取验证码</string>
    <string name="sign_up_next_button">下一步</string>
    <string name="confirm_pwd_hint">确认密码</string>
    <string name="scrollView_description_info">完善个人信息</string>
    <string name="login_top_bar_title">欢迎</string>
    <string name="sign_up_top_bar_title">注册</string>
    <string name="info_top_bar_title">添加个人信息</string>
    <string name="info_add_real_name_hint">真实姓名</string>
    <string name="info_add_birth_hint">出生年月</string>
    <string name="info_add_sex_hint">性别</string>
    <string name="info_personal_info_icon">个人信息icon</string>
    <string name="info_add_phone_hint">手机号</string>
    <string name="info_add_weight_hint">体重(kg)</string>
    <string name="info_add_blood_type_hint">血型</string>
    <string name="info_add_relationship">关系</string>
    <string name="info_add_family_phone_hint">手机号</string>
    <string name="info_top_bar_button_skip">跳过</string>
    <string name="info_add_medical_conditions_hint">医疗状况</string>
    <string name="info_add_medical_notes_hint">病例备注</string>
    <string name="info_add_allergy_hint">过敏反应</string>
    <string name="info_add_medications_hint">用药</string>
    <string name="info_top_bar_button_save">保存</string>
    <string name="signUp_user_name_hint">用户名</string>
    <string name="user_avatar">用户头像</string>
    <string name="my_page_icon">菜单图标</string>
    <string name="my_page_can_touch_hint">可点击提示</string>
    <string name="home_bottom_bar_history">历史</string>
    <string name="home_bottom_bar_emergency">呼救</string>
    <string name="home_bottom_bar_my_page">我的</string>
    <string name="emergency_page_cancel_hint">取消</string>
    <string name="info_add_address_hint">常住地</string>
    <string name="phone_number_len_not_correct_hint">请输入正确的手机号</string>
    <string name="code_len_not_correct_hint">请输入正确验证码</string>
    <string name="password_not_unanimous">输入密码不一致</string>
    <string name="info_relationship">关系</string>
    <string name="info_top_bar_button_edit">编辑</string>
    <string name="info_top_bar_button_delete">删除</string>
    <string name="settings">设置</string>
    <string name="change_password_save">保存</string>
    <string name="change_password_hint">新密码</string>
    <string name="change_password_confirm_hint">确认密码</string>
    <string name="my_page_add_hint">添加呼救人</string>
    <string name="my_page_chosen_hint">已选择呼救人</string>
</resources>